--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gideon Usani - Introduction</title>
+    <title>Gideon Usani - Software Developer Introduction</title>
+    <meta name="description" content="Learn more about Gideon Usani, an aspiring software developer. Discover his interests, background, and contact information.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Gideon Usani">
 </head>
 <body>
     <header>
         <h1>Gideon Usani</h1>
-        <nav>
+        <nav aria-label="Main Navigation"></nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#interests">Interests</a></li>
@@ -15,21 +18,27 @@
         </nav>
     </header>
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! My name is Gideon Usani. I am an aspiring Software Developer.</p>
+        <section id="about" aria-labelledby="about-heading">
+            <h2 id="about-heading">About Me</h2>
+            <p>Hello! My name is Gideon Usani. I am an aspiring <strong>Software Developer</strong> passionate about technology and innovation.</p>
         </section>
-        <section id="interests">
-            <h2>My Interests</h2>
+        <section id="interests" aria-labelledby="interests-heading">
+            <h2 id="interests-heading">My Interests</h2>
             <ul>
                 <li>Swimming</li>
                 <li>Working Out</li>
                 <li>Coding</li>
             </ul>
         </section>
+        <aside>
+            <h3>Contact Information</h3>
+            <address>
+                Email: <a href="mailto:gideon.usani@example.com" aria-label="Email Gideon Usani">usani3121@gmail.com</a>
+            </address>
+        </aside>
     </main>
     <footer>
-        <p>&copy; 2024 Gideon` Usani</p>
+        <p>&copy; 2024 Gideon Usani. All rights reserved.</p>
     </footer>
 </body>
 </html>
