--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <aside>
             <h3>Contact Information</h3>
             <address>
-                Email: <a href="mailto:gideon.usani@example.com" aria-label="Email Gideon Usani">usani3121@gmail.com</a>
+                Email: <a href="mailto:usani3121@gmail.com" aria-label="Email Gideon Usani">usani3121@gmail.com</a>
             </address>
         </aside>
     </main>
